# Project_Mobile_Quinta_Noite_2026

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docs/: api-endpoints.md  rodar.md  (+2 more)
services/agendaService/: Dockerfile  pyproject.toml  service.yml
services/agendaService/src/: __init__.py  observability.py  server.py
services/agendaService/src/API/: __init__.py  dependencies.py  exampleRouter.py  provider.py  router.py
services/agendaService/src/API/Controllers/: AppointmentController.py  CalendarController.py  ClinicController.py  DoctorController.py  InfraController.py  PatientController.py  RoomController.py  RuleController.py  WebsocketController.py  __init__.py
services/agendaService/src/API/Interfaces/: __init__.py  appointment.py  base.py  calendar.py  clinic.py  doctor.py  infra.py  patient.py  room.py  rule.py
services/agendaService/src/Infra/: __init__.py  database.py
services/agendaService/src/Infra/Mapper/: DomainMapper.py  JsonMapper.py
services/agendaService/src/Infra/adapter/ExternServices/: CalendarDataClient.py  __init__.py
services/agendaService/src/Infra/adapter/Messaging/: EventBus.py  __init__.py
services/agendaService/src/Infra/adapter/Messaging/rabbitMQ/: baseConsumer.py  baseProducer.py  client.py  userServiceConsumers.py
services/agendaService/src/Infra/adapter/Messaging/websocket/: connectManager.py  container.py  gatewayWSImplement.py
services/agendaService/src/Infra/adapter/repository/: OptimizeRules.py  __init__.py  base.py
services/agendaService/src/Infra/adapter/repository/commands/: AgendaRepoSqlAlchemy.py  AppointmentRepoSqlAlchemy.py  CalendarRepoSqlAlchemy.py  ClinicRepoSqlAlchemy.py  DoctoRepoSqlAlchemy.py  PatientRepoSqlAlchemy.py  RoomRepoSqlAlchemy.py  RuleRepoSqlAlchemy.py  __init__.py
services/agendaService/src/Infra/adapter/repository/querys/: AgendaQueryRepositories.py  AppointmentSchedulingRepoSqlAlchemy.py  __init__.py
services/agendaService/src/Infra/cache/: RuleOptimizationCache.py  __init__.py  cacheService.py
services/agendaService/src/Infra/cache/cacheDomain/: OptimizeRules.py
services/agendaService/src/Infra/clients/: __init__.py  datadog.py  postgres.py  prometheus.py  rabbitmq.py  redis_client.py
services/agendaService/src/Infra/config/: settings.py
services/agendaService/src/Infra/config/db/: __init__.py  database.py
services/agendaService/src/Infra/handlers/: InfraHealthHandler.py  UserServiceEventHandlers.py  __init__.py
services/agendaService/src/Infra/migrations/: 001_create_agenda_tables.sql  002_create_appointment_types.sql  runner.py
services/agendaService/src/modules/: __init__.py
services/agendaService/src/modules/Agenda/: __init__.py
services/agendaService/src/modules/Agenda/Aplication/: __init__.py
services/agendaService/src/modules/Agenda/Aplication/UseCases/: _context.py
services/agendaService/src/modules/Agenda/Aplication/events/: AppointmentEvent.py  CalendarEvent.py  ClinicEvent.py  DoctorEvent.py  PatientEvent.py  RoomEvent.py  RuleEvent.py  __init__.py  _helpers.py
services/agendaService/src/modules/Agenda/Domain/: __init__.py
services/agendaService/src/modules/Agenda/Domain/Entities/: Clinic.py  Day.py  __init__.py  appointment.py  doctor.py  patient.py  room.py
services/agendaService/src/modules/Agenda/Domain/Exceptions/: DomainExceptions.py  __init__.py
services/agendaService/src/modules/Agenda/Domain/ValueObjects/: AppointmentType.py  EnumAppointment.py  EnumDay.py  Hour.py  __init__.py  date.py  id.py  rangeTime.py
services/agendaService/src/modules/Agenda/Domain/rules/: BaseRule.py  BlockRule.py  GenericRule.py  RuleEnum.py  SpecificDayRule.py  SpecificRule.py  WeekRule.py  __init__.py
services/agendaService/src/modules/Agenda/Domain/services/: VerifyInRange.py  __init__.py
services/agendaService/tests/: conftest.py  mock_data.py  provider.py
services/agendaService/tests/unitario/: test_create_agenda.py  test_rule_optimization.py  test_user_service_events.py
services/agendaService/tests/unitario/consulta/: test_delete_agenda.py  test_get_agenda.py  test_list_agenda.py  test_update_agenda.py  test_xx.py
services/analyticService/: .env.example  Dockerfile  ReadMe.md  pyproject.toml  service.yml
services/analyticService/observability/: prometheus.yml
services/analyticService/observability/grafana/dashboards/: services-overview.json
services/analyticService/observability/grafana/provisioning/dashboards/: dashboards.yml
services/analyticService/src/: observability.py  server.py
services/analyticService/src/api/: router.py
services/analyticService/src/infra/: database.py  messaging.py  settings.py
services/analyticService/src/modules/doctorDashboard/infra/repository/: InMemoryDoctorAnalyticsRepository.py
services/analyticService/src/services/: __init__.py  event_ingestion.py
services/analyticService/tests/: conftest.py  mock_data.py  provider.py  test_dashboards.py  test_services_with_provider.py
services/auth/: .env.example  pyproject.toml  service.yml
services/auth/src/: config.py  observability.py  server.py
services/auth/src/services/: authorization.py  event_log.py  login.py  tokenJwt.py
services/auth/tests/: conftest.py  mock_data.py  provider.py  test_authorization_openfga_routes.py  test_login_with_mock_data.py  test_password_validation.py
services/notificationService/: pyproject.toml  service.yml
services/notificationService/src/: observability.py  server.py
services/notificationService/src/api/: router.py
services/notificationService/src/api/controllers/: health_controller.py  notification_controller.py  websocket_controller.py
services/notificationService/src/infra/: __init__.py  database.py  messaging.py  websocket.py
services/notificationService/src/modules/email/service/: context.py
services/notificationService/src/modules/userBell/service/: context.py
services/notificationService/src/services/: __init__.py  notification_service.py
services/notificationService/tests/: conftest.py  test_notification_endpoints.py  test_notification_service.py
(+255 files in other folders)
