[project]
name = "agenda"
version = "0.1.0"
description = ""
authors = [
    {name = "Lisboa-dev",email = "matheusllisboas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "aio-pika (>=9.6.2,<10.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "ddtrace (>=4.0.0,<5.0.0)",
]

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[tool.poetry]
name = "agenda"
packages = [
  { include = "modules", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "src.server:main"


[tool.taskipy.tasks]
start2 = "uvicorn src.server:app --reload"
check = "mypy ."
test = "pytest tests"
test-unit = "pytest tests -m \"not integration\""
test-integration = "pytest tests -m integration"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"
markers = [
    "integration: tests that use real external services",
    "mock_data: tests that depend on local mock data",
]



[tool.mypy]
python_version = "3.11"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
namespace_packages = true
