[project]
name = "auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Lisboa-dev",email = "matheusllisboas@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "authlib (>=1.6.9,<2.0.0)",
    "uvloop (>=0.22.1,<0.23.0) ; sys_platform == \"linux\"",
    "starlette (>=1.0.0,<2.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
