[project]
name = "auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Lisboa-dev",email = "matheusllisboas@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvloop (>=0.22.1,<0.23.0) ; sys_platform == \"linux\"",
    "starlette (>=1.0.0,<2.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "authlib (>=1.6.5,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
]


[tool.taskipy.tasks]
test = "pytest tests"
test-unit = "pytest tests -m \"not integration\""
test-integration = "pytest tests -m integration"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"
markers = [
    "integration: tests that use real external services",
    "mock_data: tests that depend on local mock data",
]
