[project]
name = "notificacao"
version = "0.1.0"
description = ""
authors = [
    {name = "Lisboa-dev",email = "matheusllisboas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "aio-pika (>=9.6.2,<10.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
]


[tool.taskipy.tasks]
test = "pytest tests"
test-unit = "pytest tests -m \"not integration\""
test-integration = "pytest tests -m integration"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"
markers = [
    "integration: tests that use real external services",
    "mock_data: tests that depend on local mock data",
]
